--- a/_includes/record_summary.html
+++ b/_includes/record_summary.html
@@ -37,7 +37,7 @@
             <td{{ rowspan }}>{{ season }}</td>
             {% case include.type %}
               {% when "team" %}
-              <td{{ rowspan }}>{{ record.engine }}</td>
+              <td{{ rowspan }}>{% include ja_name name=record.engine %}</td>
               <td style="text-align: center;"{{ rowspan }}>{{ record.class }}</td>
               <td{{ rowspan }}>
                 {% for driver in record.drivers %}
@@ -48,7 +48,7 @@
           {% endif %}
           {% case include.type %}
             {% when "driver" %}
-              <td>{{ stats.team }}</td>
+              <td>{% include ja_name name=stats.team %}</td>
               <td style="text-align: center;">{{ stats.class }}</td>
               <td>{{ stats.races }}</td>
           {% endcase %}
